# em-scripts

./: .gitignore  pyproject.toml
0_LOGS/: from_lambda_labs_to_azure  from_lambda_labs_to_titans
R/: comparing_aligment_GPU_vs_CPU.R  methylit_breast_cancer.R
R/gpu/: methylit_breast_cancer_GPU.R
azure/: download_from_sftp_to_blob.py  parallel_lftp_download_from_md5file.py  postgresql-single-server.sh  upload_to_blob.py
bio-informatic/: downsampling.sh  samples.csv
docker-containers/hatchet/: docker-compose.hatchet.yml  docker-compose.yml
docker-containers/methyldackel/: Dockerfile
gatk/: deduplicate.sh
linux/: download_from_ftp_with_username.sh  download_samples.sh  parallel_download_from_md5file.sh  parallel_lftp_download.py  parallel_lftp_download_from_md5file.py  print_bam_filenames.py  upload_to_blob  upload_to_file_share
notebook/: analyze_downloads.ipynb
notebook/analysis_results/: analysis_download_state.json.xlsx
parabrics/: align_arabidopsis.sh  bam_metrics_parabrics.sh  deduplicate_extract.sh  extract_arabidopsis.sh
python/: .gitignore  download_with_aria2.py  move_files_recursively.py  remove_files_recursively.py  test_download_with_aria2.ipynb  test_move_files_recursively.py  verify_md5sum_file.ipynb  verify_md5sum_file.py
