[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Barea",email = "ebarea@epimethyl.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob (>=12.24.1,<13.0.0)",
    "pysftp (>=0.2.9,<0.3.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

